# stellarmesh

./: pixi.toml  pyproject.toml
.github/workflows/: test.yml
docs/: format.rst  index.rst
docs/notebooks/tutorials/: volume_meshing.ipynb
scripts/: bump.py
src/stellarmesh/: __init__.py  mesh.py  moab.py
tests/: conftest.py
tests/benchmark/: test_mesh_benchmark.py
tests/integration/: test_tally.py
tests/resources/: concentric-cylinders-with-through-hole-vol.msh
tests/unit/: test_geometry.py  test_mesh.py  test_moab.py
