[build-system]
requires = ["setuptools>=80", "setuptools-scm[simple]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "stellarmesh"
authors = [{ name = "Alex Koen" }]
dynamic = ["version"]
description = "Meshing library for nuclear workflows."
readme = "README.rst"
requires-python = ">=3.11"
dependencies = ["numpy", "pymmg", "meshio[all]"]


[tool.ruff]
target-version = "py311"
extend-include = ["*.ipynb"]


[tool.ruff.lint]
select = [
    "E",
    "W",
    "I",
    "N",
    "A",
    "B",
    "F",
    "D",
    "FBT",
    "C4",
    "SIM",
    "TD",
    "PL",
    "TRY",
    "NPY",
    "PERF",
    "RUF",
]
ignore = [
    "TRY003",  # Exception with string (vs. defining custom exception)
    "PLR2004", # Magic number
]
pydocstyle.convention = "google"

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/test_*.py" = ["F811"] # Variable redefinition (required for fixtures)


[tool.pyright]
pythonVersion = "3.11"

[tool.pytest]
markers = [
    "unit: unit test.",
    "integration: integration test.",
    "benchmark: mesh backend benchmark.",
]
